--- a/data/en/homepage.yml
+++ b/data/en/homepage.yml
@@ -156,7 +156,7 @@ portfolio:
       date : "Feb 2018"
       category : "Machine Learning"
       ############################## call to action #########################
-call_to_action:
+GitHub:
   enable : true
   bg_image : "images/backgrounds/need-service.jpg"
   title : "You can check out my Project for the below link"
