--- a/data/en/homepage.yml
+++ b/data/en/homepage.yml
@@ -162,7 +162,7 @@ GitHub:
   title : "You can check out my Project for the below link"
   button:
     enable : true
-    label : "GtiHub"
+    label : "GitHub"
     link : "https://github.com/Srishti-Rani"
 
     
