--- a/config.toml
+++ b/config.toml
@@ -1,6 +1,6 @@
 ######################## default configuration ####################
 baseURL = "https://examplesite.com"
-title = "Somrat | Hugo Portfolio Template"
+title = "Srishti | Portfolio"
 theme = "somrat"
 # disable language
 disableLanguages = [] # desable language from here
@@ -68,27 +68,21 @@ URL = "#portfolio"
 weight = 4
 
 [[menu.main]]
-name = "Testimonial"
-URL = "#testimonial"
-weight = 5
-
-[[menu.main]]
 name = "Contact"
 URL = "#contact"
-weight = 6
+weight = 5
 
 
 #################### default parameters ################################
 [params]
-logo_light = "images/logo.png"
-logo_dark = "images/logo-dark.png"
+logo_light = "images/logo.jpg"
+logo_dark = "images/logo-dark.jpg"
 # Meta data
 description = "This is meta description"
-author = "somrat"
+author = "srishti"
 # contact form action
-contact_form_action = "" # contact form works with https://formspree.io
-# Google Analitycs
-google_analitycs_id = "" # your id
+contact_form_action = "https://formspree.io/xgeljgdw" # contact form works with https://formspree.io
+
 
 # Preloader
 [params.preloader]
@@ -98,23 +92,15 @@ preloader = "images/preloader.gif" # use jpg, png, svg or gif format.
 ############################# social site ########################
 [[params.social]]
 icon = "fa-facebook-f" # fontawesome icon 4.7.0 : https://fontawesome.com/v4.7.0/icons/
-link = "https://www.facebook.com/somrat.mac"
-
-[[params.social]]
-icon = "fa-twitter" # fontawesome icon 4.7.0 : https://fontawesome.com/v4.7.0/icons/
-link = "https://twitter.com/somrat_37"
-
-[[params.social]]
-icon = "fa-instagram" # fontawesome icon 4.7.0 : https://fontawesome.com/v4.7.0/icons/
-link = "https://www.instagram.com/somrat_sorkar/"
+link = "https://www.facebook.com/srishti.rani.3557"
 
 [[params.social]]
 icon = "fa-github" # fontawesome icon 4.7.0 : https://fontawesome.com/v4.7.0/icons/
-link = "https://github.com/Somrat37"
+link = "https://github.com/Srishti-Rani"
 
 [[params.social]]
 icon = "fa-linkedin" # fontawesome icon 4.7.0 : https://fontawesome.com/v4.7.0/icons/
-link = "https://www.linkedin.com/in/somrat-sorkar-872581158/"
+link = "https://www.linkedin.com/in/srishti-rani-8029011a5/"
 
 
 ################################### English language #####################################
@@ -124,8 +110,6 @@ languageCode = "en-us"
 contentDir = "content/english"
 weight = 1
 home = "Home"
-# copyright
-copyright = "Copyright &copy; 2020 a hugo theme by [somrat](https://somrat.netlify.com)"
 
 
 ################################### French language #####################################
@@ -135,5 +119,3 @@ languageCode = "fr-fr"
 contentDir = "content/french"
 weight = 2
 home = "Accueil"
-# copyright
-copyright = "Copyright &copy; 2020 a hugo theme by [somrat](https://somrat.netlify.com)"
