--- a/data/fr/homepage.yml
+++ b/data/fr/homepage.yml
@@ -1,12 +1,12 @@
 ########################## hero area ##########################
 hero:
-  title : "I'm Somrat Sorkar"
+  title : "I'm Srishti Rani"
 
   # animated text loop
   occupations:
     - "Web Developer"
-    - "Graphic Designer"
-    - "Database Manager"
+    - "Software Developer"
+    - "Machine Learning"
 
   # slider background image loop
   slider_image:
@@ -24,9 +24,9 @@ hero:
 ####################### Full screen navigation #####################
 fullscreen_nav:
   enable : true
-  bg_image : "images/backgrounds/full-nav-bg.jpg"
-  first_name : "MacGyver"
-  last_name : "SOMRAT"
+  bg_image : "images/backgrounds/full-nav-bg.png"
+  first_name : "$"
+  last_name : "SRISHTI"
   
 
 ########################### About ##################################
@@ -34,58 +34,41 @@ about:
   enable : true
   image : "images/backgrounds/portrait.jpg"
   title : "KNOW MORE <br> ABOUT ME"
-  content : "It's Somrat, Professional Web Developer. I love to write code, it's my passoin. I am here to help you, i am here to design your web page. i can help you to describe yourself in the best way.<br>No matter how difficult your web page is, i will find an easy way and complete your work anyway. Stay connect with me............😊"
+  content : " I am 21 years old, currently in 4th year, pursuing a career in Computer Science & Engineering from Future Institute of Engineering & Management, Kolkata, India. Born and brought up in Ranchi, India. I have done my schooling from Kairali School Ranchi in 2017, with Science as my background.
+
+My idea behind taking up Computer Science & Engineering is my love for programming and the fact that, given the knowledge, I can make a computer do almost anything I want it to do.
+
+I have a keen interest in the field of Wed Development,Software Development and Machine Learning, and I'm presently learning and working on the skills required to expertise in the same.
+
+My hobbies include reading novels such as  The Lunar Chronicles,The Girl With All The Gifts and many more; reading articles, handicraft, traveling, and watching web series.
+
+I am a firm believer of passion and determination, can lead you to success. Stay connected with me............😊"
   # button
   button:
     enable : true
     label : "DOWNLOAD MY CV"
-    link : "#" # you can put your cv in static folder and give the path here.
+    link : "#static/cv.docx" # you can put your cv in static folder and give the path here.
 
-###########################3 Experience ##############################
+###########################3 Skill ##############################
 experience:
   enable : true
-  title : "EXPERIENCE"
+  title : "Skill"
   experience_list:
     # experience item loop
     - name : "Web Developer"
-      company : "Fiverr.com"
-      duration : "2016-2018"
-      content : "I work with HTML, CSS, and Javascript to create websites and web applications like Personal, Business, Blog, E-comerches etc."
+      content : "I work with HTML, CSS, and Javascript to create websites and web applications.I also work with Hugo."
       
     # experience item loop
-    - name : "Graphic Designer"
-      company : "Fiverr.com"
-      duration : "2015-2018"
-      content : "Graphic design is art with a purpose. I love illustration, so logo desing is my favorite work. But i can do many things with graphics."
+    - name : "Software Developer"
+      content : " I work with Java as well as C.I know a bit on programming in Python  too."
       
     # experience item loop
     - name : "Database Manager"
-      company : "Polytechnic"
-      duration : "2014-2018"
-      content : "Database management is among the fundamental processes in the software field of computing. I know MS Access very well."
+      content : "Database management is among the fundamental processes in the software field of computing. I know MySql well."
 
-
-############################### Skill #################################
-skill:
-  enable : true
-  title : "SKILL"
-  skill_list:
-    # skill item loop
-    - name : "Web Development"
-      parcentage : "98%"
-      
-    # skill item loop
-    - name : "Graphic Design"
-      parcentage : "85%"
-      
-    # skill item loop
-    - name : "Database Management"
-      parcentage : "90%"
-      
-    # skill item loop
-    - name : "Wordpress"
-      parcentage : "70%"
-
+    # experience item loop
+    - name : "Machine Learning"
+      content : " I have keen interest in ML using Python and Data Science ."
 
 ################################### Service ##############################3
 service:
@@ -97,7 +80,7 @@ service:
       image : "images/icons/web-development.png"
       
     # service item loop
-    - name : "Graphic Design"
+    - name : "Machine Learning"
       image : "images/icons/graphic-design.png"
       
     # service item loop
@@ -107,15 +90,6 @@ service:
     # service item loop
     - name : "Software Development"
       image : "images/icons/software-development.png"
-      
-    # service item loop
-    - name : "Digital Marketing"
-      image : "images/icons/marketing.png"
-      
-    # service item loop
-    - name : "Mobile App Development"
-      image : "images/icons/mobile-app.png"
-
 
 ############################## call to action #########################
 call_to_action:
@@ -173,109 +147,16 @@ portfolio:
     - name : "Project <br> Title"
       image : "images/portfolio/item7.jpg"
       date : "Feb 2018"
-      category : "Graphics"
+      category : "Machine Learning"
       
     # portfolio item loop
     - name : "Project <br> Title"
       image : "images/portfolio/item8.jpg"
       date : "Feb 2018"
-      category : "Graphics"
+      category : "Machine Learning"
       
-    # portfolio item loop
-    - name : "Project <br> Title"
-      image : "images/portfolio/item9.jpg"
-      date : "Feb 2018"
-      category : "Database"
+    
       
-    # portfolio item loop
-    - name : "Project <br> Title"
-      image : "images/portfolio/item10.jpg"
-      date : "Feb 2018"
-      category : "Database"
-      
-    # portfolio item loop
-    - name : "Project <br> Title"
-      image : "images/portfolio/item11.jpg"
-      date : "Feb 2018"
-      category : "Database"
-      
-    # portfolio item loop
-    - name : "Project <br> Title"
-      image : "images/portfolio/item12.jpg"
-      date : "Feb 2018"
-      category : "Graphics"
-      
-    # portfolio item loop
-    - name : "Project <br> Title"
-      image : "images/portfolio/item13.jpg"
-      date : "Feb 2018"
-      category : "Graphics"
-      
-    # portfolio item loop
-    - name : "Project <br> Title"
-      image : "images/portfolio/item14.jpg"
-      date : "Feb 2018"
-      category : "Graphics"
-      
-    # portfolio item loop
-    - name : "Project <br> Title"
-      image : "images/portfolio/item15.jpg"
-      date : "Feb 2018"
-      category : "Graphics"
-
-
-################################# Testimonial #########################33
-testimonial:
-  enable : true
-  title : "TESTIMONIALS"
-  testimonial_slider:
-    # slider item loop
-    - name : "Micheal Clark"
-      image : "images/clients/client1.jpg"
-      designation : "CEO, RANDOM COMPANY"
-      content : "Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolores ad,
-                omnis totam iusto quia? Excepturi itaque quaerat, quia unde delectus rem error dignissimos in iusto."
-                
-    # slider item loop
-    - name : "Peter Parker"
-      image : "images/clients/client2.jpg"
-      designation : "CEO, RANDOM COMPANY"
-      content : "Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolores ad,
-                omnis totam iusto quia? Excepturi itaque quaerat, quia unde delectus rem error dignissimos in iusto."
-                
-    # slider item loop
-    - name : "Jessica Jones"
-      image : "images/clients/client3.jpg"
-      designation : "CEO, RANDOM COMPANY"
-      content : "Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolores ad,
-                omnis totam iusto quia? Excepturi itaque quaerat, quia unde delectus rem error dignissimos in iusto."
-
-
-######################### funfacts #############################3
-funfacts:
-  enable : true
-  funfacts_list:
-    # funfacts item loop
-    - name : "HANDS TO WORK"
-      image : "images/icons/works.png"
-      count : "100"
-      
-    # funfacts item loop
-    - name : "HAPPY CLIENT"
-      image : "images/icons/happy.png"
-      count : "200"
-      
-    # funfacts item loop
-    - name : "FINISHED PROJECT"
-      image : "images/icons/project.png"
-      count : "250"
-      
-    # funfacts item loop
-    - name : "CUPS OF COFFEE"
-      image : "images/icons/coffee.png"
-      count : "150"
-
-
 ############################## contact ###########################
 contact:
   enable : true
