--- a/config.toml
+++ b/config.toml
@@ -1,5 +1,5 @@
 ######################## default configuration ####################
-baseURL = "https://examplesite.com"
+baseURL = "https://srishtirani.netlify.com"
 title = "Srishti | Portfolio"
 theme = "somrat"
 # disable language
