--- a/data/en/homepage.yml
+++ b/data/en/homepage.yml
@@ -38,7 +38,7 @@ about:
 
 My idea behind taking up Computer Science & Engineering is my love for programming and the fact that, given the knowledge, I can make a computer do almost anything I want it to do.
 
-I have a keen interest in the field of Wed Development,Software Development and Machine Learning, and I'm presently learning and working on the skills required to expertise in the same.
+I have a keen interest in the field of Web Development,Software Development and Machine Learning and I'm presently learning and working on the skills required to expertise in the same.
 
 My hobbies include reading novels such as  The Lunar Chronicles,The Girl With All The Gifts and many more; reading articles, handicraft, traveling, and watching web series.
 
