french lang added

--- a/data/fr/homepage.yml
+++ b/data/fr/homepage.yml
@@ -1,145 +1,145 @@
-########################## hero area ##########################
-hero:
-  title : "I'm Srishti Rani"
+########################## zone des héros ###################### ####
+héros:
+  titre: "Je suis Srishti Rani"
 
-  # animated text loop
-  occupations:
-    - "Web Developer"
-    - "Software Developer"
-    - "Machine Learning"
+  # boucle de texte animée
+  professions:
+    - "Développeur web"
+    - "Développeur de logiciels"
+    - "Machine Learning"
 
-  # slider background image loop
-  slider_image:
-    - "images/slider/slider-1.jpg"
-    - "images/slider/slider-2.jpg"
-    - "images/slider/slider-3.jpg"
+  # boucle d'image d'arrière-plan du curseur
+  slider_image:
+    - "images / slider / slider-1.jpg"
+    - "images / slider / slider-2.jpg"
+    - "images / slider / slider-3.jpg"
 
-  # button
-  button:
-    enable : true
-    label : "HIRE ME"
-    link : "#contact"
+  # bouton
+  bouton:
+    activer: vrai
+    étiquette: "HIRE ME"
+    lien: "#contact"
 
 
-####################### Full screen navigation #####################
+####################### Navigation plein écran ######################
 fullscreen_nav:
-  enable : true
-  bg_image : "images/backgrounds/full-nav-bg.png"
-  first_name : "$"
-  last_name : "SRISHTI"
-  
+  activer: vrai
+  bg_image: "images / arrière-plans / full-nav-bg.png"
+  prénom: "$"
+  nom: "SRISHTI"
+  
 
-########################### About ##################################
-about:
-  enable : true
-  image : "images/backgrounds/portrait.jpg"
-  title : "KNOW MORE <br> ABOUT ME"
-  content : " I am 21 years old, currently in 4th year, pursuing a career in Computer Science & Engineering from Future Institute of Engineering & Management, Kolkata, India. Born and brought up in Ranchi, India. I have done my schooling from Kairali School Ranchi in 2017, with Science as my background.
+########################### À propos ###################### ############
+à propos:
+  activer: vrai
+  image: "images / arrière-plans / portrait.jpg"
+  title: "EN SAVOIR PLUS SUR MOI"
+  contenu: "J'ai 21 ans, actuellement en 4ème année, poursuivant une carrière en informatique et ingénierie au Future Institute of Engineering & Management, Kolkata, Inde. Né et élevé à Ranchi, Inde. J'ai fait mes études à Kairali École Ranchi en 2017, avec la science comme arrière-plan.
 
-My idea behind taking up Computer Science & Engineering is my love for programming and the fact that, given the knowledge, I can make a computer do almost anything I want it to do.
+Mon idée derrière l'informatique et l'ingénierie est mon amour pour la programmation et le fait que, étant donné les connaissances, je peux faire un ordinateur faire presque tout ce que je veux qu'il fasse.
 
-I have a keen interest in the field of Wed Development,Software Development and Machine Learning, and I'm presently learning and working on the skills required to expertise in the same.
+J'ai un vif intérêt dans le domaine du développement Wed, du développement logiciel et de l'apprentissage automatique, et j'apprends et travaille actuellement sur les compétences requises pour l'expertise dans le même domaine.
 
-My hobbies include reading novels such as  The Lunar Chronicles,The Girl With All The Gifts and many more; reading articles, handicraft, traveling, and watching web series.
+Mes hobbies incluent la lecture de romans tels que The Lunar Chronicles, The Girl With All The Gifts et bien d'autres; lire des articles, de l'artisanat, voyager et regarder des séries Web.
 
-I am a firm believer of passion and determination, will lead you to success. "
- # button
-  button:
-    enable : true
-    label : "DOWNLOAD MY CV"
-    link : "https://drive.google.com/file/d/1NxD-yhN-Es3jEeMpQHn4PkQ65UnZmYYx/view?usp=sharing" # you can put your cv in static folder and give the path here.
- # button
-  button2:
-    enable : true
-    label : "DOWNLOAD MY VIDEO RESUME"
-    link : "https://drive.google.com/file/d/1NxD-yhN-Es3jEeMpQHn4PkQ65UnZmYYx/view?usp=sharing" # you can put your cv in static folder and give the path here.
+Je suis un fervent partisan de la passion et de la détermination, vous conduira au succès. "
+ # bouton
+  bouton:
+    activer: vrai
+    label: "TELECHARGER MON CV"
+    lien: "https://drive.google.com/file/d/1NxD-yhN-Es3jEeMpQHn4PkQ65UnZmYYx/view?usp=sharing" # vous pouvez mettre votre cv dans un dossier statique et donner le chemin ici.
+ # bouton
+  bouton2:
+    activer: vrai
+    label: "TELECHARGER MON CV VIDEO"
+    lien: "https://drive.google.com/file/d/1NxD-yhN-Es3jEeMpQHn4PkQ65UnZmYYx/view?usp=sharing" # vous pouvez mettre votre cv dans un dossier statique et donner le chemin ici.
 
-###########################3 Skill ##############################
-experience:
-  enable : true
-  title : "Skill"
-  experience_list:
-    # experience item loop
-    - name : "Web Developer"
-      content : "I work with HTML, CSS, and Javascript to create websites and web applications.I also work with Hugo."
-      
-    # experience item loop
-    - name : "Software Developer"
-      content : " I work with Java as well as C. I know a bit on programming in Python  too."
-      
-    # experience item loop
-    - name : "Database Manager"
-      content : "Database management is among the fundamental processes in the software field of computing. I know MySql."
+########################### 3 Compétence ##################### #########
+expérience:
+  activer: vrai
+  titre: "Compétence"
+  experience_list:
+    # boucle d'élément d'expérience
+    - nom: "Développeur Web"
+      contenu: "Je travaille avec HTML, CSS et Javascript pour créer des sites Web et des applications Web. Je travaille également avec Hugo."
+      
+    # boucle d'élément d'expérience
+    - nom: "Développeur logiciel"
+      contenu: "Je travaille aussi bien avec Java que C. Je connais aussi un peu la programmation en Python."
+      
+    # boucle d'élément d'expérience
+    - nom: "Database Manager"
+      contenu: "La gestion de bases de données fait partie des processus fondamentaux dans le domaine logiciel de l'informatique. Je connais MySql."
 
-    # experience item loop
-    - name : "Machine Learning"
-      content : " I have keen interest in ML using Python and Data Analytics ."
+    # boucle d'élément d'expérience
+    - nom: "Machine Learning"
+      contenu: "J'ai un vif intérêt pour ML en utilisant Python et Data Analytics."
 
-################################### Service ##############################3
-service:
-  enable : true
-  title : "SERVICES"
-  service_list:
-    # service item loop
-    - name : "Web Development"
-      image : "images/icons/web-development.png"
-      
-    # service item loop
-    - name : "Machine Learning"
-      image : "images/icons/graphic-design.png"
+################################### Un service ############## ################ 3
+un service:
+  activer: vrai
+  titre: "SERVICES"
+  liste_services:
+    # boucle d'élément de service
+    - nom: "Développement Web"
+      image: "images / icônes / web-development.png"
+      
+    # boucle d'élément de service
+    - nom: "Machine Learning"
+      image: "images / icônes / graphic-design.png"
 
-# service item loop
-    - name : "Software Development"
-      image : "images/icons/software-development.png"
-      
-    # service item loop
-    - name : "Database Management"
-      image : "images/icons/dbms.png"
-      
-    
+# boucle d'élément de service
+    - nom: "Développement de logiciels"
+      image: "images / icônes / software-development.png"
+      
+    # boucle d'élément de service
+    - nom: "Gestion de base de données"
+      image: "images / icônes / dbms.png"
+      
+    
 
-############################## call to action #########################
+############################## appel à l'action ################# ########
 call_to_action:
-  enable : true
-  bg_image : "images/backgrounds/need-service.jpg"
-  title : "NEED A SERVICE?"
-  button:
-    enable : true
-    label : "CONTACT ME !"
-    link : "#contact"
+  activer: vrai
+  bg_image: "images / arrière-plans / need-service.jpg"
+  title: "BESOIN D'UN SERVICE?"
+  bouton:
+    activer: vrai
+    étiquette: "CONTACTEZ MOI!"
+    lien: "#contact"
 
 
-############################# portfolio ################################
-portfolio:
-  enable : true
-  title : "PORTFOLIO"
-  portfolio_list:
-    # portfolio item loop
-    - name : "Srishti<br> Portfolio"
-      image : "images/portfolio/item1.png"
-      date : "April 2020"
-      category : "Web Development"
+############################# portfolio #################### ############
+portefeuille:
+  activer: vrai
+  titre: "PORTFOLIO"
+  portfolio_list:
+    # boucle d'élément de portefeuille
+    - nom: "Srishti <br> Portfolio"
+      image: "images / portfolio / item1.png"
+      date: "avril 2020"
+      catégorie: "Développement Web"
 
- # portfolio item loop
-    - name : "Chinuon <br>JoinForm"
-      image : "images/portfolio/item2.png"
-      date : "May 2020"
-      category : "Web Development"
-      
-     
-      ############################## call to action #########################
+ # boucle d'élément de portefeuille
+    - nom: "Chinuon <br> JoinForm"
+      image: "images / portfolio / item2.png"
+      date: "mai 2020"
+      catégorie: "Développement Web"
+      
+     
+      ############################## appel à l'action ################# ########
 GitHub:
-  enable : true
-  bg_image : "images/backgrounds/need-service.jpg"
-  title : "Checkout my projects below!!"
-  button:
-    enable : true
-    label : "GitHub"
-    link : "https://github.com/Srishti-Rani"
-      
-    
-      
-############################## contact ###########################
+  activer: vrai
+  bg_image: "images / arrière-plans / need-service.jpg"
+  title: "Découvrez mes projets ci-dessous !!"
+  bouton:
+    activer: vrai
+    étiquette: "GitHub"
+    lien: "https://github.com/Srishti-Rani"
+      
+    
+      
+############################## contact ################### ########
 contact:
-  enable : true
-  title : "SAY HELLO!"
+  activer: vrai
+  titre: "DITES BONJOUR!"
