--- a/data/fr/homepage.yml
+++ b/data/fr/homepage.yml
@@ -47,7 +47,7 @@ Je suis un fervent partisan de la passion et de la détermination, vous conduira
   button:
     enable : true
     label : "TELECHARGER MON CV"
-    link : "https://drive.google.com/file/d/1NxD-yhN-Es3jEeMpQHn4PkQ65UnZmYYx/view?usp=sharing" # you can put your cv in static folder and give the path here.
+    link : "https://drive.google.com/file/d/16eeAEg6HQoh8loho59raypKc-igr-psW/view?usp=sharing" # you can put your cv in static folder and give the path here.
 
 
 ###########################3 Skill ##############################
@@ -121,6 +121,12 @@ portfolio:
       image : "images/portfolio/item2.png"
       date : "mai 2020"
       category : "Développement Web"
+
+ # portfolio item loop
+    - name : "Diabetes<br>Prediction"
+      image : "images/portfolio/item3.PNG"
+      date : "Jan 2020"
+      category : "Machine Learning"
       
      
       ############################## call to action #########################
